# mozo

./: configure.ac
Mozo/: MainWindow.py  MenuEditor.py  util.py
data/: mozo.ui
